test_suite/tests/ui/malformed/not_list.stderr
error: expected attribute arguments in parentheses: #[serde(...)]
 --> tests/ui/malformed/not_list.rs:4:3
  |
4 | #[serde]
  |   ^^^^^

error: expected parentheses: #[serde(...)]
 --> tests/ui/malformed/not_list.rs:5:9
  |
5 | #[serde = "?"]
  |         ^
